# BunkScanner

./: LICENSE  README.md  package-lock.json  package.json  server.js
Code/: server.js
Code/coverage/: clover.xml  coverage-final.json  lcov.info
Code/coverage/lcov-report/: index.html
Code/docs/: PROTOTYPING_PLAN.md  SUPPLY_CHAIN_VALIDATION.md
Code/firmware/: README.md
Code/firmware/node/: CMakeLists.txt
Code/firmware/node/Inc/: modbus_slave.h  pin_config.h  vl53l7cx_driver.h
Code/firmware/node/Src/: vl53l7cx_driver.c
Code/test/: modbus.test.js  server.test.js
Code/tests/: errorHandler.test.js
Code/tools/: bus-diagnostic.js  error-monitor.js
Code/web/: errorHandler.js
Design/: Bill of Materials.xlsx
Design/3D/: 00 INSTALLATION.iam  Bunk 1.ipt  vl53l7cx-FOV.ipt  vl53l7cx-carrier-model-FOV.ipt  vl53l7cx-carrier-model.iam  vl53l7cx-carrier-model.ipt
Design/3D/OldVersions/: 00 INSTALLATION.0001.iam  Bunker_scan.ipj.bak  (+4 more)
code/: server.js
code/coverage/: clover.xml  coverage-final.json  lcov.info
code/docs/: ANALYSIS_AND_FINDINGS.md
code/firmware/: README.md
code/test/: modbus.test.js  server.test.js
code/tools/: bus-diagnostic.js  error-monitor.js
coverage/: clover.xml  coverage-final.json  lcov.info
coverage/lcov-report/: index.html
docs/: 5_YEAR_STRATEGIC_PLAN.md  ANALYSIS_AND_FINDINGS.md  GO_NOGO_MILESTONE_1.md  IP_STRATEGY.md  PHASE1_TRACKER.md  PROTOTYPING_PLAN.md  README.md  SUPPLY_CHAIN_VALIDATION.md
firmware/: README.md
firmware/node/: STM32G071RBTx_FLASH.ld
lib/: errorHandler.js
test/: modbus.test.js  server.test.js
tests/: errorHandler.test.js  firmware.test.js  frontend.test.js  server.test.js
tools/: bus-diagnostic.js  error-monitor.js
web/: app.js  clean_image.py  index.html  style.css
(+21 files in other folders)
